# nlvm

./: .gitignore  README.md  pyproject.toml
docs/: README.md  runtime.md  todo-cli.md
example/: providers.example.json
example/cli_tool/: helpers.py  invoker.py  main.py  types.py
example/nl_modules/tasks/: build_plan.nls  complete_task.nls  create_task.nls  list_tasks.nls  score_tasks.nls  smart_schedule.nls
nlvm/: __init__.py  engine.py  models.py  parser.py  registry.py  resolver.py  runtime.py
tests/: test_engine.py  test_example_cli.py  test_example_helpers.py  test_parser.py  test_registry.py  test_resolver.py  test_runtime.py
tests/fixtures/: sample_helpers.py  sample_types.py
